@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>br.edu.ifsul.cc.lpoo.projetolpooe1_barbarawehrmann</groupId>
-    <artifactId>ProjetoLPOOE1_BarbaraWehrmann</artifactId>
+    <groupId>br.edu.ifsul.cc.lpoo.projetolpooe2_barbarawehrmann</groupId>
+    <artifactId>ProjetoLPOOE2_BarbaraWehrmann</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>br.edu.ifsul.cc.lpoo.projetolpooe1_barbarawehrmann.ProjetoLPOOE1_BarbaraWehrmann</exec.mainClass>
+        <exec.mainClass>br.edu.ifsul.cc.lpoo.projetolpooe2_barbarawehrmann.ProjetoLPOOE2_BarbaraWehrmann</exec.mainClass>
     </properties>
     
     <dependencies>
